fixtures/frontend/milestone-2/invalid/non-exhaustive-match-control/main.aivi
type Screen =
  | Loading
  | Ready Text
  | Failed Text

value current:Screen = Loading

value screenView =
    <with value={current} as={screen}>
        <match on={screen}>
            <case pattern={Loading}>
                <Label text="Loading..." />
            </case>
            <case pattern={Ready title}>
                <Label text={title} />
            </case>
        </match>
    </with>
